# tulsi-backend-rust

./: AGENTS.md  Cargo.toml  Dockerfile  NOTES.md  OBSERVABILITY.md  OPENAPI.md  README.md  docker-compose.yml
crates/tulsi-seed/: Cargo.toml
crates/tulsi-seed/src/: main.rs
docs/: redis-caching.md
migrations/: 001_create_tasks.sql  002_create_projects.sql  003_create_boards.sql  004_create_users.sql  005_create_columns.sql  006_add_author_to_tasks.sql  008_create_task_history.sql  009_create_plans.sql  010_create_labels.sql
src/: auth.rs  cache.rs  lib.rs  main.rs  observability.rs
src/handlers/: auth_handler.rs  board_handler.rs  column_handler.rs  label_handler.rs  mod.rs  plan_handler.rs  project_handler.rs  task_handler.rs  task_history_handler.rs  user_handler.rs
src/models/: auth.rs  board.rs  column.rs  label.rs  mod.rs  plan.rs  project.rs  task.rs  task_history.rs  user.rs
src/repositories/: board_repository.rs  column_repository.rs  label_repository.rs  mod.rs  plan_repository.rs  project_repository.rs  task_history_repository.rs  task_repository.rs  user_repository.rs
src/routes/: auth_routes.rs  board_routes.rs  column_routes.rs  label_routes.rs  mod.rs  plan_routes.rs  project_routes.rs  task_routes.rs  user_routes.rs
tests/: board_repository_test.rs  column_repository_test.rs  full_user_journey_test.rs  http_board_test.rs  http_column_test.rs  http_error_test.rs  http_label_test.rs  http_plan_test.rs  http_project_test.rs  http_task_test.rs  http_user_test.rs  label_repository_test.rs  plan_repository_test.rs  project_repository_test.rs  task_repository_test.rs  user_repository_test.rs  workflow_kanban_test.rs
tests/common/: mod.rs
