[workspace]
members = [".", "crates/tulsi-seed"]
resolver = "3"

[package]
name = "tulsi-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# OpenTelemetry
opentelemetry = { version = "0.28", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "metrics", "trace"] }
tracing-opentelemetry = "0.29"

# Prometheus metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum-prometheus = "0.8"

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
axum-test = "19.1.1"
