[package]
name = "tulsi-seed"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
fake = { version = "3", features = ["chrono", "uuid"] }
rand = "0.9"
